WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162620
It should be possible to dispatch events on documents that do not have a browsing context
https://bugs.webkit.org/show_bug.cgi?id=162620
Summary
It should be possible to dispatch events on documents that do not have a brow...
Chris Dumez
Reported
2016-09-27 09:22:34 PDT
It should be possible to dispatch events on documents that do not have a browsing context (e.g. Documents created using DOMImplementation.createHTMLDocument()). Gecko and Blink both allow this but WebKit does not.
Attachments
WIP patch
(8.12 KB, patch)
2016-09-27 09:24 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
WIP patch
(10.57 KB, patch)
2016-09-27 09:54 PDT
,
Chris Dumez
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews117 for mac-yosemite
(1.16 MB, application/zip)
2016-09-27 10:45 PDT
,
Build Bot
no flags
Details
WIP patch
(9.65 KB, patch)
2016-09-27 10:51 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
WIP patch
(9.64 KB, patch)
2016-09-27 11:01 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews114 for mac-yosemite
(1.12 MB, application/zip)
2016-09-27 12:00 PDT
,
Build Bot
no flags
Details
Patch
(14.01 KB, patch)
2016-09-27 12:19 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-09-27 09:24:04 PDT
Created
attachment 289953
[details]
WIP patch
WebKit Commit Bot
Comment 2
2016-09-27 09:27:09 PDT
Attachment 289953
[details]
did not pass style-queue: ERROR: Source/WebCore/dom/Document.cpp:4123: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 3
2016-09-27 09:54:56 PDT
Created
attachment 289959
[details]
WIP patch
Build Bot
Comment 4
2016-09-27 10:45:30 PDT
Comment on
attachment 289959
[details]
WIP patch
Attachment 289959
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2155594
Number of test failures exceeded the failure limit.
Build Bot
Comment 5
2016-09-27 10:45:33 PDT
Created
attachment 289973
[details]
Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
Chris Dumez
Comment 6
2016-09-27 10:51:17 PDT
Created
attachment 289978
[details]
WIP patch
Chris Dumez
Comment 7
2016-09-27 11:01:35 PDT
Created
attachment 289982
[details]
WIP patch
Alexey Proskuryakov
Comment 8
2016-09-27 11:29:42 PDT
Duplicate of
bug 26147
?
Build Bot
Comment 9
2016-09-27 12:00:14 PDT
Comment on
attachment 289982
[details]
WIP patch
Attachment 289982
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2156208
Number of test failures exceeded the failure limit.
Build Bot
Comment 10
2016-09-27 12:00:18 PDT
Created
attachment 289991
[details]
Archive of layout-test-results from ews114 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-yosemite Platform: Mac OS X 10.10.5
Chris Dumez
Comment 11
2016-09-27 12:19:39 PDT
Created
attachment 289995
[details]
Patch
Chris Dumez
Comment 12
2016-09-27 12:51:18 PDT
***
Bug 26147
has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 13
2016-09-27 13:57:41 PDT
Comment on
attachment 289995
[details]
Patch Clearing flags on attachment: 289995 Committed
r206462
: <
http://trac.webkit.org/changeset/206462
>
WebKit Commit Bot
Comment 14
2016-09-27 13:57:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug